--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-lodash": "^3.0.5",
     "gatsby-plugin-manifest": "^2.0.24",
+    "gatsby-plugin-netlify-cms": "^4.10.0",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
@@ -35,6 +36,7 @@
     "intersection-observer": "^0.5.1",
     "katex": "^0.11.1",
     "lodash": "^4.17.19",
+    "netlify-cms-app": "^2.14.25",
     "node-sass": "^4.11.0",
     "prismjs": "^1.21.0",
     "query-string": "^6.13.1",
